fix everyday math exercises alignment

--- a/styles/designs/corn/parts/_exercises-components.scss
+++ b/styles/designs/corn/parts/_exercises-components.scss
@@ -6,7 +6,7 @@ $Exercise__Container: (
         display: enum('ValueSet:::OPTIONAL'), //used in 3 column exercises
         vertical-align: enum('ValueSet:::OPTIONAL'), //used in 3 column exercises
         page-break-inside: avoid,
-        width: enum('ValueSet:::REQUIRED'), 
+        width: enum('ValueSet:::OPTIONAL'), 
         padding-right: v-spacing(1),
         float: enum('ValueSet:::OPTIONAL'), //used in 2 column exercises
       )
@@ -49,7 +49,7 @@ $SectionExercises--Specific: (
   _properties: (
       margin-bottom: v-spacing(2),
       width: 100%,
-      display: enum('ValueSet:::REQUIRED'), 
+      display: enum('ValueSet:::OPTIONAL'), //not used in everday math exercises
       flex-direction: enum('ValueSet:::OPTIONAL'), //used in TwoColumnExercieses with flex 
       flex-wrap: enum('ValueSet:::OPTIONAL'), //used in TwoColumnExercieses with flex 
       justify-content: enum('ValueSet:::OPTIONAL'), //used in TwoColumnExercieses with flex 
@@ -119,6 +119,7 @@ $Exercise__Problem__Wrapper: (
     _subselector: " [data-type='problem']",
     _properties:(
         display: table,
+        overflow-wrap: break-word,
     )
 );
 
