--- a/styles/output/dev-math-pdf.css
+++ b/styles/output/dev-math-pdf.css
@@ -1181,7 +1181,8 @@ nav#toc > ol > li > ol > li > a::after {
   padding-right: 0.7rem; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section [data-type="exercise"] [data-type='problem'] {
-  display: table; }
+  display: table;
+  overflow-wrap: break-word; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section [data-type="exercise"] [data-type='problem'] > .os-number {
   display: table-cell;
@@ -1292,7 +1293,8 @@ nav#toc > ol > li > ol > li > a::after {
   page-break-inside: avoid; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section .material-set-2 [data-type='problem'] {
-  display: table; }
+  display: table;
+  overflow-wrap: break-word; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section .material-set-2 [data-type='problem'] > .os-number {
   display: table-cell;
@@ -1429,7 +1431,8 @@ nav#toc > ol > li > ol > li > a::after {
   float: left; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section.writing [data-type="exercise"] [data-type='problem'] {
-  display: table; }
+  display: table;
+  overflow-wrap: break-word; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section.writing [data-type="exercise"] [data-type='problem'] > .os-number {
   display: table-cell;
@@ -1467,7 +1470,8 @@ nav#toc > ol > li > ol > li > a::after {
   align-self: flex-end; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section.writing [data-type="exercise"]:nth-of-type(even) [data-type='problem'] {
-  display: table; }
+  display: table;
+  overflow-wrap: break-word; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section.writing [data-type="exercise"]:nth-of-type(even) [data-type='problem'] > .os-number {
   display: table-cell;
@@ -1500,8 +1504,7 @@ nav#toc > ol > li > ol > li > a::after {
 
 .os-eos.os-section-exercises-container > section.section-exercises > section.everyday {
   margin-bottom: 1.4rem;
-  width: 100%;
-  display: table; }
+  width: 100%; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section.everyday > p > strong {
   color: #1E7E91;
@@ -1528,12 +1531,12 @@ nav#toc > ol > li > ol > li > a::after {
 .os-eos.os-section-exercises-container > section.section-exercises > section.everyday [data-type="exercise"] {
   margin-bottom: 1.4rem;
   page-break-inside: avoid;
-  width: 50%;
-  padding-right: 0.7rem;
-  float: left; }
+  width: 48%;
+  padding-right: 0.7rem; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section.everyday [data-type="exercise"] [data-type='problem'] {
-  display: table; }
+  display: table;
+  overflow-wrap: break-word; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section.everyday [data-type="exercise"] [data-type='problem'] > .os-number {
   display: table-cell;
@@ -1571,7 +1574,8 @@ nav#toc > ol > li > ol > li > a::after {
   align-self: flex-end; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section.everyday [data-type="exercise"]:nth-of-type(even) [data-type='problem'] {
-  display: table; }
+  display: table;
+  overflow-wrap: break-word; }
 
 .os-eos.os-section-exercises-container > section.section-exercises > section.everyday [data-type="exercise"]:nth-of-type(even) [data-type='problem'] > .os-number {
   display: table-cell;
