--- a/styles/templates/template2/parts/_exercises-settings.scss
+++ b/styles/templates/template2/parts/_exercises-settings.scss
@@ -100,12 +100,8 @@
 @include add_settings((
     EverydayExercises: (
         _selectors: ('.os-eos.os-section-exercises-container > section.section-exercises > section.everyday'),
-        SectionExercisesSpecific: (
-            display: table,
-        ),
         ExerciseContainer: (
-            width: 50%,
-            float: left,
+            width: 48%,
         ),
         ExercisesParagraphTitle: (
             font-family: (_ref: 'typography:::baseFont'),
